# jobsworthy

./: .gitignore  README.md  pyproject.toml
_infra/: infra.toml
docs/job/: spark-job.md
docs/model/: model.md
docs/repo/: repository.md
docs/structure/: hive-print-schema-to-puml-class-model.md  puml-to-table-dsl.md  table-schema.md
jobsworth/: config.py  spark_job.py
jobsworth/observer/: observer.py
jobsworth/observer/domain/: column.py  error.py  metrics.py  schema.py  table.py  vocab.py
jobsworth/observer/repo/: __init__.py  observer.py
jobsworth/performance/: perf_log.py
jobsworth/performance/repo/: performance.py
jobsworth/repo/: cosmos_repo.py  db_config.py  hive_repo.py  spark_db.py
jobsworth/structure/: schema_util.py  structure.py  vocab_util.py
jobsworth/structure/model/: structure.py
jobsworth/structure/util/: schema_util.py
jobsworth/util/: databricks.py  error.py  secrets.py  session.py
jobsworthy/: __init__.py  config.py
jobsworthy/model/: __init__.py  model_errors.py  streamer.py  value.py
jobsworthy/observer/: __init__.py  observer.py
jobsworthy/observer/domain/: error.py  metrics.py  schema.py  table.py  vocab.py
jobsworthy/observer/repo/: __init__.py  observer.py
jobsworthy/performance/: __init__.py  perf_log.py
jobsworthy/performance/repo/: performance.py
jobsworthy/repo/: __init__.py  cosmos_repo.py  hive_repo.py  properties.py  reader_writer.py  readers.py  repo_messages.py  spark_db.py  spark_repo.py  spark_util.py  sql_builder.py  writers.py
jobsworthy/spark_job/: __init__.py  config.py  spark_job.py
jobsworthy/structure/: __init__.py  schema_util.py  structure.py  value.py  vocab_util.py
jobsworthy/structure/puml/: __init__.py  cli.py  model_maker.py  puml_maker.py
jobsworthy/structure/puml/builder/: class_model_builder.py  print_schema_to_puml.py
jobsworthy/structure/puml/model/: class_model.py
jobsworthy/util/: databricks.py  env.py  error.py  logger.py  secrets.py  session.py
tests/: test_config.py  test_job.py  test_jobsworth.py
tests/fixtures/: print_schema_output.txt  print_schema_output_2.txt  print_schema_output_3.txt  puml.puml  puml2.puml  puml_3.puml  table1_rows.json  table1_rows_2.json  table1_rows_3.json  uml_model.puml  uml_model_with_db.puml
tests/shared/: __init__.py  config_for_testing.py  cosmos_fixture.py  databricks_utils_helper.py  dependencies.py  di.py  init_db.py  init_state_spy.py  spark_test_session.py  table_setup.py  tables.py
tests/shared/initialisers/: __init__.py  random_initialiser1.py  random_initialiser2.py
tests/test_job/: test_config.py  test_job.py
tests/test_model/: test_streaming.py
tests/test_observer/: test_config.py  test_observer.py  test_observer_persistence.py
tests/test_performance/: test_performance.py
tests/test_repo/: test_cosmos_db.py  test_db.py  test_db_config.py  test_db_lifecycle.py  test_db_naming.py  test_hive_db_properties.py  test_hive_read.py  test_hive_table_properties.py  test_hive_writing.py  test_readers.py  test_spark_util.py  test_sql_builder.py  test_streaming_read_write.py
tests/test_structure/: test_create_table_from_structure.py  test_structure.py  test_uml_model.py  test_vocab.py
tests/test_util/: test_databricks.py  test_env.py  test_logger.py  test_secrets.py  test_with_di.py
(+5 files in other folders)
